<resources>
    <string name="app_name">PLANT_039</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Tienda de Instrumentos musicales</string>
    <string name="second_fragment_label">detail</string>
    <string name="NombreRv">Nombre:  %1$s </string>
    <string name="PrecioRv">Precio:$  %1$s  </string>
    <string name="NombreDetalles">Nombre:  %1$s  </string>
    <string name="OrigenDetalles">Origen:  %1$s  </string>
    <string name="DescripcionDetalles">Descripcion: \n\n %1$s </string>
    <string name="AnioCreacion">Año:  %1$s  </string>
    <string name="ManualDesc">Manual:  %1$s  </string>




</resources>